--- a/src/app/components/github-user/components/profile-user/profile-user.component.scss
+++ b/src/app/components/github-user/components/profile-user/profile-user.component.scss
@@ -1,16 +1,20 @@
 .card-size{
-    width: 700px;
-    height: 400px;
+    width: 900px;
+    height: 500px;
     padding: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     aspect-ratio: 3 / 4;
 }
 
 .image-size{
-    width: 300px;
-    height: 300px;
+    width: 250px;
+    height: 250px;
 }
 
 .info-size{
-    width: 300px;
+    width: 250px;
+}
+
+.table-size{
+    width: 700px;
 }
