--- a/src/app/components/github-user/github-user.component.html
+++ b/src/app/components/github-user/github-user.component.html
@@ -12,6 +12,6 @@
     </form>
 
     <div [hidden]="showCard === false">
-        <app-profile-user [user]="user"></app-profile-user>
+        <app-profile-user [user]="user" [repos]="repos"></app-profile-user>
     </div>
 </div>
