feat: se agregan detalles finales de estilos en la aplicación

--- a/src/app/components/github-user/components/submit-button/submit-button.component.html
+++ b/src/app/components/github-user/components/submit-button/submit-button.component.html
@@ -1,1 +1,2 @@
-<button type="button" (click)="getData()" class="btn btn-primary">Consultar</button>
+<button type="button" (click)="getData()" class="btn btn-primary text-white">Consultar</button>
+<button type="button" (click)="cleanData()" class="btn btn-secondary text-white">Limpiar</button>
