--- a/src/app/components/github-user/components/profile-user/profile-user.component.html
+++ b/src/app/components/github-user/components/profile-user/profile-user.component.html
@@ -1,39 +1,42 @@
 <div class="card d-flex justify-content-center mt-5 card-size">
-    <div class="card-body d-flex">
+    <div class="card-body card-border d-flex">
         <section>
             <h3 class="d-flex justify-content-center">{{user.login}}</h3>
-            <img [src]="user.avatar_url" alt="" class="image-size">
+            <img [src]="user.avatar_url" alt="" class="image-size ms-4 border border-primary border-3 rounded">
             <div class="d-flex flex-column info-size">
-                <div class="d-flex justify-content-evenly mt-3">
-                   <span><i class="bi bi-folder-fill fs-3"></i>{{user.public_repos}}</span>
-                   <span><i class="bi bi-people-fill fs-3"></i> {{user.followers}}</span>
+                <div class="d-flex justify-content-evenly mt-2">
+                   <span><i class="bi bi-folder-fill fs-3 text-primary me-1"></i>{{user.public_repos}}</span>
+                   <span><i class="bi bi-people-fill fs-3 text-primary"></i> {{user.followers}}</span>
                 </div>
-             <p class="d-fleX justify-content-center mt-2 ms-3">{{user.bio ? user.bio : 'No tiene biografia disponible' }}</p>
+             <p class="d-flex justify-content-center mt-2">{{user.bio ? user.bio : 'Usuario sin biografia' }}</p>
             </div>
         </section>
         <section class="ms-5 d-flex flex-column align-items-center table-size">
-         <h4 class="">Repositorios más recientes</h4>
+         <h3 class="">Repositorios más recientes</h3>
          <p *ngIf="repos?.length === 0">
-            No tiene repositorios disponibles <i class="bi bi-emoji-tear-fill fs-3 ms-1"></i>
+            Usuario sin repositorios <i class="bi bi-emoji-tear-fill fs-3 ms-1 text-primary"></i>
          </p>
-             <table class="table table-striped" *ngIf="repos?.length !== 0">
-                <thead>
+             <table class="table" *ngIf="repos?.length !== 0">
+                <thead class="table-light">
                   <tr>
-                    <th scope="col">N</th>
+                    <th scope="col">Link</th>
                     <th scope="col">Repositorio</th>
                     <th scope="col">Descripción</th>
                   </tr>
                 </thead>
-                <tbody>
+                <tbody class="table-group-divider">
                   <tr *ngFor="let repo of repos; let i=index">
-                    <td>{{i + 1}}</td>
+                    <td><a [href]="repo.html_url" target="_blank" class="icon-link"><i class="bi bi-folder-symlink-fill"></i></a></td>
                     <td>{{repo.name}}</td>
-                    <td>{{repo.description ?  repo.description : 'no tiene descripción disponible'}}</td>
+                    <td>{{repo.description ?  repo.description : 'Repositorio sin descripción'}}</td>
                   </tr>
                 </tbody>
               </table>
         </section>
-
+<!-- <section class="d-flex justify-content-center">
+  <h3 class="d-flex justify-content-center">Usuario no encontrado</h3>
+  <img src="../../../../../assets/images/user.png" alt="" class="image-size ms-4 border border-primary border-3 rounded">
+</section> -->
     </div>
 
   </div>
