--- a/src/app/components/github-user/components/profile-user/profile-user.component.scss
+++ b/src/app/components/github-user/components/profile-user/profile-user.component.scss
@@ -2,7 +2,7 @@
     width: 900px;
     height: 500px;
     padding: 20px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 4px 8px rgba(132, 0, 255, 0.2);
     aspect-ratio: 3 / 4;
 }
 
@@ -12,9 +12,19 @@
 }
 
 .info-size{
-    width: 250px;
+    width: 300px;
 }
 
 .table-size{
     width: 700px;
 }
+
+.click-link {
+    display: block;
+    width: 100%;
+    height: 100%;
+    text-decoration: none;
+    color: inherit;
+    cursor: pointer;
+  }
+
