--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,6 +13,6 @@ h1, h2, h3 {
     font-family: "Barlow", system-ui;
   }
 
-p, table{
+p, table, input, span{
     font-family: "Montserrat", sans-serif;
 }
