--- a/src/app/components/github-user/components/profile-user/profile-user.component.scss
+++ b/src/app/components/github-user/components/profile-user/profile-user.component.scss
@@ -6,6 +6,14 @@
     aspect-ratio: 3 / 4;
 }
 
+.empty-card-size{
+    width: 400px;
+    height: 500px;
+    padding: 20px;
+    box-shadow: 0 4px 8px rgba(132, 0, 255, 0.2);
+    aspect-ratio: 3 / 4;
+}
+
 .image-size{
     width: 250px;
     height: 250px;
